[package]
name = "calby-users"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = 'abort'

[dependencies]
dotenv = "0.15.0"
tokio = { version = "0.2", features = ["full"] }
diesel = { version = "1.4.4", features = ["postgres"] }
tokio-diesel = "0.3.0"
r2d2 = "0.8.10"
r2d2_postgres = "0.18.1"
