[package]
name = "calby-users"
version = "0.1.1"
edition = "2021"

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = 'abort'

[dependencies]
dotenv = "0.15.0"
tokio = { version = "1", features = ["full"] }
diesel = { version = "1.4.4", features = ["postgres"] }
bb8 = "0.7"
bb8-diesel = "0.2.1"
tonic = "0.7"
prost = "0.10"
futures-core = "0.3"
futures-util = "0.3"

[build-dependencies]
tonic-build = "0.7"
